# Lamb

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.me  imgui.ini  test_imgui.cpp  vcpkg.json
config/: links.json
includes/: camera.hpp  component.hpp  entity_manager.hpp  input.hpp  material.hpp  model.hpp  mtl_parser.hpp  primitive.hpp  renderable.hpp  shader.hpp
res/: materials.mtl
shaders/: basic_fragment.glsl  basic_vertex.glsl  light_fragment.glsl  light_vertex.glsl  lighting_fragment.glsl  lighting_vertex.glsl  toon_fragment.glsl  vertex.glsl
src/: camera.cpp  camera.hpp  main.cpp  model.cpp  primitive.cpp  renderable.cpp  shader.cpp  shader.hpp  time.hpp
src/component/: entity.cpp  entity.hpp
src/component/transform/: transform.hpp
src/event/: input.cpp  input.hpp
src/io/: mtl_parser.cpp
src/io/config/: config_manager.cpp  config_manager.hpp
src/io/mtl/: mtl_parser.hpp
src/renderer/camera/: camera.cpp  camera.hpp
src/renderer/lighting/: materials.cpp  materials.hpp
src/renderer/renderable/: model.cpp  model.hpp  primitive.cpp  renderable.cpp  renderable.hpp
src/renderer/shader/: shader.cpp  shader.hpp  shader_engine.cpp  shader_engine.hpp
src/renderer/texture/: texture.cpp  texture.hpp
tests/: ActionTest.cpp  CMakeLists.txt  InputHandlerFactoryTest.cpp  InputSystemTest.cpp
